--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
   </section>
 
   <section class="main-content">
-    <p><img src="./src/images/Home_Screenshot.png"></img></p>
+    <!-- <p><img src="./src/images/Home_Screenshot.png"></img></p> -->
     <h1>Features</h1>
     <ul>
-      <li>End-to-End encyption</li>
-      <li>Private blockchain</li>
-      <li>Share files</li>
+      <li>End-to-End encyption using automatically generated RSA keys</li>
+      <li>Utilizes the private blockchain to prevent message tampering</li>
     </ul>
     <footer class="site-footer">
       <span class="site-footer-owner"><a href="https://github.com/akshayrkapadia/TimeWarp">ChainMail</a> is maintained by <a href="https://github.com/akshayrkapadia">Akshay R. Kapadia</a> and <a href="https://github.com/saumil98">Saumil Patel</a>.</span>
