--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <footer class="site-footer">
       <span class="site-footer-owner"><a href="https://github.com/akshayrkapadia/TimeWarp">ChainMail</a> is maintained by <a href="https://github.com/akshayrkapadia">Akshay R. Kapadia</a> and <a href="https://github.com/saumil98">Saumil Patel</a>.</span>
       <span class="site-footer-credits">Copyright 2018 Under GPL-3.0, Akshay R. Kapadia & Saumil Patel</span>
+      <span class="site-footer-owner">Icon made by <a href="https://www.freepik.com/">Freepik</a> from <a href="https://www.flaticon.com/">www.flaticon.com</a>.</span>
+
 
     </footer>
 
