--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     <footer class="site-footer">
       <span class="site-footer-owner"><a href="https://github.com/akshayrkapadia/TimeWarp">ChainMail</a> is maintained by <a href="https://github.com/akshayrkapadia">Akshay R. Kapadia</a> and <a href="https://github.com/saumil98">Saumil Patel</a>.</span>
       <span class="site-footer-credits">Copyright 2018 Under GPL-3.0, Akshay R. Kapadia & Saumil Patel</span>
-      <span class="site-footer-owner">Icon made by <a href="https://www.freepik.com/">Freepik</a> from <a href="https://www.flaticon.com/">www.flaticon.com</a>.</span>
-
+      <div>Icons made by <a href="https://www.flaticon.com/authors/nikita-golubev" title="Nikita Golubev">Nikita Golubev</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 
     </footer>
 
